[tool.ruff]
line-length = 120

[tool.poetry]
name = "node-exporter-secure"
version = "1.0.0"
description = ""
authors = ["CherrySuryp <hackyourrself@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
aiohttp = "^3.9.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
